Optimized navigation